[project]
name = "vt"
version = "0.1.0"
description = "A Python client for the VersaTrak API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "uplink==0.10.0",
]

[dependency-groups]
dev = [
    "prek>=0.3.3",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
