[project]
name = "vt"
version = "0.1.0"
description = "A Python client for the VersaTrak API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.5",
    "nest-asyncio>=1.6.0",
    "polars>=0.19.0",
    "pyarrow>=24.0.0",
    "uplink==0.10.0",
]

[dependency-groups]
dev = [
    "prek>=0.3.10",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.1.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "ignore:.*coroutine .* was never awaited.*:RuntimeWarning",
  "ignore::pytest.PytestUnraisableExceptionWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
